Major refactor of string utils